--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9767fc7
+	base = ae4a329
 	trimbase = 
 	parent = release/kinetic/vision_msgs
-	previous = 
+	previous = 9767fc7
