--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 941921f
+	base = daf58d5
 	trimbase = 
 	parent = arch/kinetic/vision_msgs
-	previous = 
+	previous = 941921f
