--- a/tracks.yaml
+++ b/tracks.yaml
@@ -19,6 +19,26 @@ tracks:
     vcs_type: git
     vcs_uri: https://github.com/Kukanani/vision_msgs.git
     version: 0.0.1
+  archlunar:
+    actions:
+    - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
+      :{vcs_uri} --name :{name} --output-dir :{archive_dir_path}
+    - git-bloom-import-upstream :{archive_path} :{patches} --release-version :{version}
+      --replace
+    - git-bloom-generate -y rosrelease :{ros_distro} --source upstream -i :{release_inc}
+    - git-bloom-generate -y rosarch --prefix release/:{ros_distro} :{ros_distro} -i
+      :{release_inc}
+    devel_branch: lunar-devel
+    last_version: 0.0.1
+    name: upstream
+    patches: null
+    release_inc: '1'
+    release_repo_url: null
+    release_tag: :{version}
+    ros_distro: lunar
+    vcs_type: git
+    vcs_uri: https://github.com/Kukanani/vision_msgs.git
+    version: 0.0.1
   kinetic:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
