--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 46c5c4e
+	base = ff99078
 	trimbase = 
 	parent = release/lunar/vision_msgs
-	previous = 
+	previous = 46c5c4e
