--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c533caa
+	base = d16abd7
 	trimbase = 
 	parent = arch/lunar/vision_msgs
-	previous = 
+	previous = c533caa
