--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 71583a9
+	base = 0d23da2
 	trimbase = 
 	parent = release/melodic/vision_msgs
-	previous = 
+	previous = 71583a9
