--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1c75162
+	base = 97e9ec4
 	trimbase = 
 	parent = arch/melodic/vision_msgs
-	previous = 
+	previous = 1c75162
